# homer-analysis

./: README.md  flake.nix  pyproject.toml
analyzer/: __main__.py
data/: iliad.txt  odyssey.txt
data/cltk/grc/embeddings/nlpl/: LIST  README  meta.json
data/iliad/: book_10.xml  book_11.xml  book_12.xml  book_13.xml  book_14.xml  book_15.xml  book_16.xml  book_17.xml  book_18.xml  book_19.xml  book_2.xml  book_20.xml  book_21.xml  book_22.xml  book_23.xml  book_24.xml  book_3.xml  book_4.xml  book_5.xml  book_6.xml  book_7.xml  book_8.xml  book_9.xml
data/odyssey/: book_1.xml  book_10.xml  book_11.xml  book_12.xml  book_13.xml  book_14.xml  book_15.xml  book_16.xml  book_17.xml  book_18.xml  book_19.xml  book_2.xml  book_20.xml  book_21.xml  book_22.xml  book_23.xml  book_24.xml  book_3.xml  book_4.xml  book_5.xml  book_6.xml  book_7.xml  book_8.xml  book_9.xml
sample_package/: __main__.py
scripts/: download_data.sh  iliad_sources.txt  odyssey_sources.txt
src/analyzer/: __main__.py
src/gutenberg/: __init__.py
src/tests/: test_gutenberg.py
