[tool.poetry]
name = "homer-analysis"
version = "0.1.0"
description = "Text analysis of Homer's Iliad and Odyssey texts in Ancient Greek"
authors = ["Cyprian Zdebski <cyprianz5mail@gmail.com>"]
readme = "README.md"
license = "GPL-3.0"
packages = [{ include = "analyzer" }]

[tool.poetry.dependencies]
python = "3.12.4"
beautifulsoup4 = "4.12.3"
lxml = "5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
